--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "version": "0.11.9",
   "main": "dist/sim/index.js",
   "dependencies": {
+    "autolinker": "^4.0.0",
     "esbuild": "^0.16.10",
     "mysql2": "^3.9.7",
+    "nef": "^1.1.0",
+    "nef-fs": "^1.0.0",
     "preact": "^10.5.15",
     "preact-render-to-string": "^5.1.19",
     "probe-image-size": "^7.2.3",
+    "request-image-size": "^2.2.0",
     "sockjs": "^0.3.21",
     "source-map-support": "^0.5.21"
   },
